# my-rpc-project-v2

./: CMakeLists.txt
config/: rpc_client.json  rpc_server.json  servers.json
protos/: message.pb.cc  message.pb.h  message.proto
rpc_src/compress_data/: zstd_compress.cpp  zstd_compress.h
rpc_src/conn_balancer/: load_balancer.cpp  load_balancer.h  random.h  round.h  weight.h  zk_conn_handler.cpp  zk_conn_handler.h
rpc_src/core/: client_main.cpp  compress_encrypt_demo_main.cpp  config_demo_main.cpp  error_code.h  log_demo_main.cpp  rpc_client.cpp  rpc_client.h  serializer_demo_main.cpp  servers_main.cpp
rpc_src/encrypt/: aes_encrypt.cpp  aes_encrypt.h
rpc_src/load_config/: registry_config.cpp  registry_config.h  rpc_client_config.cpp  rpc_client_config.h  rpc_server_config.cpp  rpc_server_config.h  thread_pool_config.cpp  thread_pool_config.h
rpc_src/network/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  create_socket.cpp  create_socket.h  message_cycle.cpp  message_cycle.h
rpc_src/protocol/: rpc_protocol.cpp  rpc_protocol.h
rpc_src/registry/: service_registry.cpp  service_registry.h
rpc_src/serializer/: json_serializer.h  protobuf_serializer.h  serializer_manager.h
rpc_src/service/: rpc_service.h  service.h  service_manager.h
rpc_src/thread_pool/: thread_pool.cpp  thread_pool.h  thread_pool_singleton.cpp  thread_pool_singleton.h
rpc_src/tools/: stress_test_client.cpp
utils/: log_manager.h
